# http-health-probe

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: health_check.rs
