[package]
name = "http-health-probe"
description = "A simple HTTP health probe tool"
authors = ["David Calavera"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.48.0", features = ["macros"] }

[dev-dependencies]
httpmock = "0.7"
